--- a/Zurvival/Zurvival.vcxproj
+++ b/Zurvival/Zurvival.vcxproj
@@ -88,14 +88,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Chunk.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenu.cpp" />
+    <ClCompile Include="Map.cpp" />
     <ClCompile Include="SpriteManager.cpp" />
     <ClCompile Include="Zurvival.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Chunk.h" />
     <ClInclude Include="Const.h" />
     <ClInclude Include="MainMenu.h" />
+    <ClInclude Include="Map.h" />
     <ClInclude Include="SpriteManager.h" />
     <ClInclude Include="Zurvival.h" />
   </ItemGroup>
