Added new mutations (CRASHES NEED TO FIX)
Began trainer class to handle training system

--- a/Zurvival/Zurvival.vcxproj
+++ b/Zurvival/Zurvival.vcxproj
@@ -103,6 +103,7 @@
     <ClCompile Include="Radar.cpp" />
     <ClCompile Include="SpriteManager.cpp" />
     <ClCompile Include="tinyxml2.cpp" />
+    <ClCompile Include="Trainer.cpp" />
     <ClCompile Include="Zombie.cpp" />
     <ClCompile Include="Zurvival.cpp" />
   </ItemGroup>
@@ -122,6 +123,7 @@
     <ClInclude Include="Radar.h" />
     <ClInclude Include="SpriteManager.h" />
     <ClInclude Include="tinyxml2.h" />
+    <ClInclude Include="Trainer.h" />
     <ClInclude Include="Zombie.h" />
     <ClInclude Include="Zurvival.h" />
   </ItemGroup>
