Moltes coses, fixes, log, pausa, canvis de punters, sistema de fitxers

--- a/Zurvival/Zurvival.vcxproj
+++ b/Zurvival/Zurvival.vcxproj
@@ -113,6 +113,7 @@
     <ClInclude Include="Config.h" />
     <ClInclude Include="Const.h" />
     <ClInclude Include="DeathPit.h" />
+    <ClInclude Include="dirent.h" />
     <ClInclude Include="Functions.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="humanDummy.h" />
