--- a/Zurvival/Zurvival.vcxproj
+++ b/Zurvival/Zurvival.vcxproj
@@ -88,6 +88,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ArrayBales.cpp" />
     <ClCompile Include="Brain.cpp" />
     <ClCompile Include="Chunk.cpp" />
     <ClCompile Include="Config.cpp" />
@@ -105,10 +106,12 @@
     <ClCompile Include="SpriteManager.cpp" />
     <ClCompile Include="tinyxml2.cpp" />
     <ClCompile Include="Trainer.cpp" />
+    <ClCompile Include="wepon.cpp" />
     <ClCompile Include="Zombie.cpp" />
     <ClCompile Include="Zurvival.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ArrayBales.h" />
     <ClInclude Include="Brain.h" />
     <ClInclude Include="Chunk.h" />
     <ClInclude Include="Config.h" />
@@ -127,6 +130,7 @@
     <ClInclude Include="SpriteManager.h" />
     <ClInclude Include="tinyxml2.h" />
     <ClInclude Include="Trainer.h" />
+    <ClInclude Include="wepon.h" />
     <ClInclude Include="Zombie.h" />
     <ClInclude Include="Zurvival.h" />
   </ItemGroup>
