Added ActorAi Changes
Not working yet

--- a/Zurvival/Zurvival.vcxproj
+++ b/Zurvival/Zurvival.vcxproj
@@ -108,7 +108,7 @@
     <ClCompile Include="SpriteManager.cpp" />
     <ClCompile Include="tinyxml2.cpp" />
     <ClCompile Include="Trainer.cpp" />
-    <ClCompile Include="wepon.cpp" />
+    <ClCompile Include="weapon.cpp" />
     <ClCompile Include="Zombie.cpp" />
     <ClCompile Include="Zurvival.cpp" />
   </ItemGroup>
@@ -134,7 +134,7 @@
     <ClInclude Include="SpriteManager.h" />
     <ClInclude Include="tinyxml2.h" />
     <ClInclude Include="Trainer.h" />
-    <ClInclude Include="wepon.h" />
+    <ClInclude Include="weapon.h" />
     <ClInclude Include="Zombie.h" />
     <ClInclude Include="Zurvival.h" />
   </ItemGroup>
